<resources>
    <string name="app_name">Погода</string>
    <string name="feelsLike">Ощущается как:</string>
    <string name="feelsLikeShort">Ощущается</string>
    <string name="wind">Ветер:</string>
    <string name="humidity">Влажность:</string>
    <string name="precipitation">Вероятность осадков:</string>
    <string name="internetPermission">Доступ к интернету запрещен пользователем. Проверьте настройки устройства!</string>
    <string name="locationPermission">Доступ к геопозиции запрещен пользователем. Проверьте настройки устройства!</string>
    <string name="temperature">Темп.°</string>
    <string name="weekday">День</string>
    <string name="forecast_description">Прогноз</string>
    <string name="wind_speed">Ветер</string>
    <string name="week_day">День</string>


    <string name="action_settings">Settings</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>
    <string name="cur_temp_placeholder">\?°</string>
    <string name="cur_descr_placeholder">Описание</string>
    <string name="city_name_placeholder">Текущее местоположение</string>
    <string name="refresh_button_description">Обновить данные геопозиции и прогноза</string>
    <string name="info_button_descr">Показать геолокацию</string>

</resources>